Fixed overlap on Parallax scrolling

--- a/css/header.css
+++ b/css/header.css
@@ -93,23 +93,19 @@ h1.title{
 h1.title a{
     text-decoration: none;
     color: white;
-    font-size: 25px;
+    font-size: 40px;
 }
 
 /* Left About us segment */
 .left-about{
-    border: 10px solid white;
-    margin: auto;
-    margin-right: 35%;
+    margin-right: 30%;
     text-align: center;
     display: grid;
 }
 
 /* Right About us segment */
 .right-about{
-    border: 10px solid white;
-    margin: auto;
-    margin-left: 35%;
+    margin-left: 30%;
     text-align: center;
     display: grid;
 }
