--- a/css/parallax.css
+++ b/css/parallax.css
@@ -8,13 +8,13 @@ body, html {
     background-image: url('https://i.imgur.com/JJ07i7o.png');
 
     /* Full height */
-    height: 25%; 
+    height: 20%; 
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: right;
     background-repeat: no-repeat;
-    background-size: 1080px;
+    background-size: 120%;
 }
 
 .parallax-pepe {
@@ -68,8 +68,8 @@ body, html {
 }
 
 .caption span.border {
-    background-color: white;
-    color: black;
+    background-color: dimgray;
+    color: white;
     padding: 18px;
     font-family: "Lato", sans-serif;
     font-size: 25px;
